processed/gerrit/txt_full/33150.txt
Change:     33150
Subject:    LU-10459 lnd: throttle tx based on queue depth
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/33150
Change-Id:  I27190364904d6c79c0cd6d382228f8b8d2b11ba0
Project:    fs/lustre-release
Branch:     b2_10
Status:     ABANDONED
Owner:      Minh Diep
Created:    2018-09-12 14:36:11.000000000
Updated:    2022-04-28 21:45:25.000000000
Patch Set:  1
Insertions: +6
Deletions:  -6
Comments:   0 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Dmitry Eremin, Amir Shehata

--- Commit Message ---
LU-10459 lnd: throttle tx based on queue depth

Throttle the transmits based on the negotiated conn queue depth
to ensure we keep the number of outstanding transmits below the
negotiated queue depth.

Test-Parameters: trivial

Lustre-change: https://review.whamcloud.com/30751
Lustre-commit: e86f55798ca7bc8f7fe22dd48c9d9f52c1bb029a

Signed-off-by: Amir Shehata <amir.shehata@intel.com>
Change-Id: I27190364904d6c79c0cd6d382228f8b8d2b11ba0
Reviewed-by: James Simmons <uja.ornl@yahoo.com>
Reviewed-by: Dmitry Eremin <dmitry.eremin@intel.com>
Signed-off-by: Minh Diep <mdiep@whamcloud.com>

--- Review History ---

--- Message (Minh Diep, 2018-09-12 14:36:11.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2018-09-12 14:37:42.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-09-12 14:41:07.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/smt/git/lustre-release/lnet/klnds/o2iblnd/o2iblnd_cb.c: In function ‘kiblnd_post_tx_locked’:
 /home/green/smt/git/lustre-release/lnet/klnds/o2iblnd/o2iblnd_cb.c:740:18: error: unused variable ‘ni’ [-Werror=unused-variable]
   struct lnet_ni *ni = peer_ni->ibp_ni;
                   ^

--- Message (Jenkins, 2018-09-12 14:56:09.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/612/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58575/ : FAILURE

--- Message (Andreas Dilger, 2022-04-28 21:45:25.000000000) ---
Abandoned

Abandon old patches on b2_10.
